--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "node-sass": "^4.14.1",
+    "powerbi-client-react": "^1.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-iframe": "^1.8.0",
     "react-scripts": "3.4.0"
   },
   "scripts": {
