--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-iframe": "^1.8.0",
+    "react-responsive-carousel": "^3.2.9",
     "react-scripts": "3.4.0"
   },
   "scripts": {
