--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.12.0",
     "react-iframe": "^1.8.0",
     "react-responsive-carousel": "^3.2.9",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-visibility-sensor": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
