--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "emailjs-com": "^2.6.4",
     "node-sass": "^4.14.1",
     "powerbi-client-react": "^1.1.0",
     "react": "^16.12.0",
@@ -36,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "hippo-components": "^1.0.0"
   }
 }
