--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "export": "next export"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
